doc/changes/package_diffs/11.1.0/template-Exasol-8-python-3.12-cuda-conda/internal_packages.md
# Internal packages comparison between flavor "Template Exasol 8 Python 3.12 Cuda Conda" in 11.1.0 and flavor "Template Exasol 8 Python 3.12 Cuda Conda" in 11.0.0

<!-- markdown-link-check-disable -->

## Apt packages

|    | Package   | Version in 11.0.0         | Version in 11.1.0         | Status   | Build-Step     |
|---:|:----------|:--------------------------|:--------------------------|:---------|:---------------|
|  0 | binutils  | 2.42-4ubuntu2.8           | 2.42-4ubuntu2.8           |          | base_test_deps |
|  1 | gdb       | 15.0.50.20240403-0ubuntu1 | 15.0.50.20240403-0ubuntu1 |          | base_test_deps |
|  2 | gdbserver | 15.0.50.20240403-0ubuntu1 | 15.0.50.20240403-0ubuntu1 |          | base_test_deps |
|  3 | gnupg     | No version specified      | No version specified      |          | security_scan  |
|  4 | patchelf  | 0.18.0-1.1build1          | 0.18.0-1.1build1          |          | base_test_deps |
|  5 | strace    | 6.8-0ubuntu2              | 6.8-0ubuntu2              |          | base_test_deps |
|  6 | trivy     | No version specified      | No version specified      |          | security_scan  |
|  7 | valgrind  | 1:3.22.0-0ubuntu3         | 1:3.22.0-0ubuntu3         |          | base_test_deps |

## Conda packages

|    | Package      | Version in 11.0.0   | Version in 11.1.0   | Status   | Build-Step   |
|---:|:-------------|:--------------------|:--------------------|:---------|:-------------|
|  0 | bazel        | =8.3.1              | =8.3.1              |          | build_deps   |
|  1 | chrpath      | =0.16               | =0.16               |          | build_deps   |
|  2 | gcc_linux-64 | =13.4.0             | =13.4.0             |          | build_deps   |
|  3 | gxx_linux-64 | =13.4.0             | =13.4.0             |          | build_deps   |
|  4 | make         | =4.4.1              | =4.4.1              |          | build_deps   |
|  5 | pcre         | =8.45               | =8.45               |          | build_deps   |
|  6 | protobuf     | =6.31.1             | =6.31.1             |          | build_deps   |